manifests/deployment-menu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu1
  namespace: kubetest
spec:
  selector:
    matchLabels:
      app: menu1
  replicas: 1
  template:
    metadata:
      labels:
        app: menu1
    spec:
      containers:
      - image: pfrdemo.azurecr.io/menucontainer
        name: menu1
        ports:
          - containerPort: 5001
