manifests/ingress-menu.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: kubetest
spec:
  ingressClassName: nginx
  rules:
    - host: resto2.novationmenu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: menu1
                port:
                  number: 5001
